--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -14,12 +14,16 @@ charset-normalizer==2.1.1
     # via requests
 exceptiongroup==1.0.4
     # via pytest
+flake8==6.0.0
+    # via -r requirements-development.in
 html5lib==1.1
     # via -r requirements.in
 idna==3.4
     # via requests
 iniconfig==1.1.1
     # via pytest
+mccabe==0.7.0
+    # via flake8
 mypy==0.991
     # via -r requirements-development.in
 mypy-extensions==0.4.3
@@ -28,6 +32,10 @@ packaging==21.3
     # via pytest
 pluggy==1.0.0
     # via pytest
+pycodestyle==2.10.0
+    # via flake8
+pyflakes==3.0.1
+    # via flake8
 pyparsing==3.0.9
     # via packaging
 pytest==7.2.0
