--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   release:
     strategy:
-      fail-false: false
+      fail-fast: false
       matrix:
         include:
           - 
