--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,13 @@ jobs:
         include:
           - 
             os: ubuntu-20.04
-            python_version: '3.8'
+            python_version: '3.8.14' # the latest version of 3.8.x
           - 
             os: windows-2019
-            python_version: '3.8'
+            python_version: '3.8.10' # the latest version of 3.8.x
           - 
             os: macos-11
-            python_version: '3.8'
+            python_version: '3.8.14' # the latest version of 3.8.x
 
     runs-on: ${{ matrix.os }}
 
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.os }}
+          python-version: ${{ matrix.python_version }}
           check-latest: true
           cache: 'pip'
           cache-dependency-path: |
