fix requirements path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
           check-latest: true
           cache: 'pip'
           cache-dependency-path: |
-            '**/requirements-development.txt'
+            './requirements-development.txt'
 
       - name: Install Dependencies
         run: |
