ci: cache-dependency-path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
           check-latest: true
           cache: 'pip'
           cache-dependency-path: |
-            './requirements-development.txt'
+            **/requirements-development.txt
 
       - name: Install Dependencies
         run: |
