--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-            pip3 install -r requirements.txt
+            pip3 install -r requirements-development.txt
             pip3 install wheel
 
       - name: Replace version
