--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements-development.in
 #
+altgraph==0.17.3
+    # via pyinstaller
 attrs==22.1.0
     # via pytest
 beautifulsoup4==4.11.1
@@ -36,6 +38,10 @@ pycodestyle==2.10.0
     # via flake8
 pyflakes==3.0.1
     # via flake8
+pyinstaller==5.6.2
+    # via -r requirements-development.in
+pyinstaller-hooks-contrib==2022.13
+    # via pyinstaller
 pyparsing==3.0.9
     # via packaging
 pytest==7.2.0
@@ -66,3 +72,6 @@ webencodings==0.5.1
     # via html5lib
 wheel==0.38.4
     # via -r requirements-development.in
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
