--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,3 +64,7 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Build Binary
+        run: |
+          pyinstaller --name liveinfo --onefile main.py
