ci: split binary and python-package workflow

--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release Binary
 
 on:
   release:
@@ -9,65 +9,6 @@ env:
   VERSION: ${{ github.event.release.tag_name != '' && github.event.release.tag_name || '0.0.0' }}
 
 jobs:
-  build-wheel:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          -
-            os: ubuntu-20.04
-            python_version: '3.8.14' # the latest version of 3.8.x
-            sed: 'sed'
-            wheel_dist_artifact_name: wheel-dist-linux-amd64
-          -
-            os: windows-2019
-            python_version: '3.8.10' # the latest version of 3.8.x
-            sed: 'sed'
-            wheel_dist_artifact_name: wheel-dist-windows-amd64
-          -
-            os: macos-11
-            python_version: '3.8.14' # the latest version of 3.8.x
-            sed: 'gsed'
-            wheel_dist_artifact_name: wheel-dist-macos-amd64
-
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install gsed for macOS
-        if: startsWith(matrix.os, 'macos-')
-        shell: bash
-        run: brew install gnu-sed
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python_version }}
-          cache: 'pip'
-          cache-dependency-path: |
-            **/requirements-development.txt
-
-      - name: Install Dependencies
-        run: |
-            pip3 install -r requirements-development.txt
-            pip3 install wheel
-
-      - name: Replace version
-        shell: bash
-        run: |
-          "${{ matrix.sed }}" -i "s/__VERSION__ = '0.0.0'/__VERSION__ = '${{ env.VERSION }}'/" liveinfo/__init__.py
-
-      - name: Build Wheel
-        run: python3 setup.py sdist bdist_wheel
-
-      - name: Upload Wheel dist/ to Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.wheel_dist_artifact_name }}
-          path: dist/*.whl
-
-
   build-binary:
     strategy:
       fail-fast: false
@@ -128,43 +69,6 @@ jobs:
 
       - name: Build Binary
         run: pyinstaller --name liveinfo --onefile main.py
-
-
-  upload-wheel:
-    needs: [build-wheel]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Restore dist/ from Wheel artifact wheel-dist-linux-amd64
-        uses: actions/download-artifact@v3
-        with:
-          name: wheel-dist-linux-amd64
-          path: ./dist
-
-      - name: Restore dist/ from Wheel artifact wheel-dist-windows-amd64
-        uses: actions/download-artifact@v3
-        with:
-          name: wheel-dist-windows-amd64
-          path: ./dist
-
-      - name: Restore dist/ from Wheel artifact wheel-dist-macos-amd64
-        uses: actions/download-artifact@v3
-        with:
-          name: wheel-dist-macos-amd64
-          path: ./dist
-
-      - name: Upload Wheel to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ env.VERSION }}
-          target_commitish: ${{ github.sha }}
-          files: dist/*.whl
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
 
 
   upload-binary:
